<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <SwitchPreferenceCompat
    android:defaultValue="false"
    android:key="@string/pref_key_wifi"
    android:title="@string/pref_title_wifi"
    app:iconSpaceReserved="false" />
  <SwitchPreferenceCompat
    android:defaultValue="false"
    android:key="@string/pref_key_hd"
    android:title="@string/pref_title_hd"
    app:iconSpaceReserved="false" />
  <ListPreference
    android:defaultValue="@string/pref_interval_value_default"
    android:dialogTitle=""
    android:entries="@array/pref_labels_interval"
    android:entryValues="@array/pref_values_interval"
    android:key="@string/pref_key_interval"
    android:summary="%s"
    android:title="@string/pref_title_interval"
    app:iconSpaceReserved="false" />

  <com.steven.muzeillect.OpenPreference
    android:key="@string/pref_key_open"
    app:iconSpaceReserved="false" />

</androidx.preference.PreferenceScreen>
